Backport changes from #568, #569 and #576. (#579)
* Backport changes from #568, #569 and #576.